--- a/XUnitTestCrawler/M.Web.CrawlerTests.csproj
+++ b/XUnitTestCrawler/M.Web.CrawlerTests.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Microsoft.Crawler\M.Web.Crawler.csproj" />
+    <ProjectReference Include="..\M.Crawler\M.Web.Crawler.csproj" />
   </ItemGroup>
 
 </Project>
